Remove docs/examples/configs/etc.
This can be maintained elsewhere; let's focus on the main codebase
for this project.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,7 @@
 dist_doc_DATA = COPYING
 
-dist_pkgdata_DATA = \
-	watermap.wad
-
 SUBDIRS = \
-	configs \
 	data \
-	docs \
-	examples \
 	pkg \
-	Source \
-	toolsrc
+	Source
+
